--- a/src/MiracleList_BS/MiracleList_BS.csproj
+++ b/src/MiracleList_BS/MiracleList_BS.csproj
@@ -56,5 +56,10 @@
   <PackageReference Include="UAParser" Version="3.1.47" />
   <PackageReference Include="Radzen.Blazor" Version="4.7.6" />
  </ItemGroup>
+ 
+ <ItemGroup>
+   <Folder Include="Properties\PublishProfiles\" />
+   <Folder Include="Properties\ServiceDependencies\" />
+ </ItemGroup>
 
 </Project>
