--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <IsPackable>false</IsPackable>
-    <Version>1.3.1</Version>
-    <AssemblyVersion>1.3.1.0</AssemblyVersion>
-    <FileVersion>1.3.1.0</FileVersion>
-  </PropertyGroup>
+    <Version>7.11.0.0</Version>
+    <AssemblyVersion>7.11.0.0</AssemblyVersion>
+    <FileVersion>7.11.0.0</FileVersion>
+  <InformationalVersion>7.11.0.0-03/12/2023 14:33:46</InformationalVersion></PropertyGroup>
 
   <ItemGroup>
     <None Remove="appsettings.json" />
