Automatischer Mailversand an neue Benutzer Speichern der ClientID beim Benutzer

--- a/src/MiracleList_Backend/appsettings.Development.json
+++ b/src/MiracleList_Backend/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
  "AppInfo": {
-  "ReleaseDate": "01.01.2018 12:00:00"
+  "ReleaseDate": "23.03.2023"
  },
  "Logging": {
   "IncludeScopes": false,
@@ -11,8 +11,14 @@
   }
  },
  "ConnectionStrings": {
-  "MiracleListDB": "Data Source=.;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "MiracleListDB": "Data Source=.;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
+ },
+
+ "EMail": {
+  "SMTPServer": "IhrServer.com",
+  "SMTPSender": "IhrName@IhreDomain.de",
+  "SMTPPassword": "geheim"
  }
 
 }
