--- a/src/MiracleList_Backend/appsettings.json
+++ b/src/MiracleList_Backend/appsettings.json
@@ -1,6 +1,6 @@
 {
  "AppInfo": {
-  "ReleaseDate": "05.03.2020 18:25:00"
+  "ReleaseDate": "23.03.2023"
  },
 
  "Logging": {
@@ -14,8 +14,14 @@
 
  "ConnectionStrings": {
 
-  "MiracleListDB": "Data Source=D120;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "MiracleListDB": "Data Source=D120;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
+ },
+
+ "EMail": {
+  "SMTPServer": "IhrServer.com",
+  "SMTPSender": "IhrName@IhreDomain.de",
+  "SMTPPassword": "geheim"
  }
 
 }
