--- a/src/DA/DA.csproj
+++ b/src/DA/DA.csproj
@@ -50,6 +50,8 @@
   <Compile Include="Migrations\20180411094415_v8.Designer.cs" />
   <Compile Include="Migrations\20181013180448_v9.cs" />
   <Compile Include="Migrations\20181013180448_v9.Designer.cs" />
+  <Compile Include="Migrations\20230323081055_v20.cs" />
+  <Compile Include="Migrations\20230323081055_v20.Designer.cs" />
   <Compile Include="Migrations\ContextModelSnapshot.cs" />
  </ItemGroup>
 
