--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,6 @@ __pycache__/
 /src/MiracleList_BD/MiracleList_BD - Backup.csproj
 /src/MLBlazorRCL/MLBlazorRCL - Backup.csproj
 /src/SamplesRCL/SamplesRCL - Backup.csproj
+/src/MiracleList_Backend/Uploads/38200
+/src/MiracleList_BS/wwwroot/Files
+/src/MiracleList_Backend/Uploads/adb89e13-df2e-4787-9fbe-951beb1e0b85/45528
