--- a/src/MiracleList_BS/MiracleList_BS.csproj
+++ b/src/MiracleList_BS/MiracleList_BS.csproj
@@ -60,6 +60,7 @@
  <ItemGroup>
    <Folder Include="Properties\PublishProfiles\" />
    <Folder Include="Properties\ServiceDependencies\" />
+   <Folder Include="wwwroot\Files\" />
  </ItemGroup>
 
 </Project>
