+Tests für WebAPI und SignalR

--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,5 @@ __pycache__/
 /src/SamplesRCL/SamplesRCL - Backup.csproj
 /src/MiracleList_Backend/Uploads/
 /src/MiracleList_BS/wwwroot/
+/ConsoleApp1/ConsoleApp1.csproj
+/ConsoleApp1/Program.cs
