--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -55,7 +55,7 @@
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   <PackageReference Include="NHibernateProfiler.Appender" Version="6.0.6040" />
   <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -64,6 +64,7 @@
   </PackageReference>
   <PackageReference Include="xunit" Version="2.4.2" />
   <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
+  <PackageReference Include="DeepEqual" Version="4.2.1" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.5.0" />
   <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
  </ItemGroup>
