--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -7,7 +7,7 @@
 
   <IsPackable>false</IsPackable>
   <IsTestProject>true</IsTestProject>
- </PropertyGroup>
+ <Version>7.12.2.0</Version><AssemblyVersion>7.12.2.0</AssemblyVersion><FileVersion>7.12.2.0</FileVersion><InformationalVersion>7.12.2.0-04/28/2023 10:08:02</InformationalVersion></PropertyGroup>
 
  <ItemGroup>
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
