--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -26,7 +26,7 @@
   <!--Zusätzliche Pakete von Microsoft-->
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="7.0.3" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
   <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.*" />
