--- a/src/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
+++ b/src/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
@@ -17,7 +17,7 @@
 
  <ItemGroup>
   <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
-  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
  </ItemGroup>
 
