fix Namen in Tests

--- a/src/BO/BO.csproj
+++ b/src/BO/BO.csproj
@@ -19,7 +19,7 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.5.0" />
-  <PackageReference Include="FluentValidation" Version="11.5.1" />
+  <PackageReference Include="FluentValidation" Version="11.5.*" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
  </ItemGroup>
