--- a/src/MiracleList_BD/MiracleList_BD.csproj
+++ b/src/MiracleList_BD/MiracleList_BD.csproj
@@ -57,7 +57,7 @@
  <!--Nuget-Pakete-->
  <ItemGroup>
   <!--Standardreferenzen für BD-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="7.0.59" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="7.0.*" />
 
   <!--Zusätzliche Pakete von Microsoft -->
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
