--- a/src/MiracleList_WinUI/MiracleList_WinUI.csproj
+++ b/src/MiracleList_WinUI/MiracleList_WinUI.csproj
@@ -1,86 +1,131 @@
 <Project Sdk="Microsoft.NET.Sdk">
- <PropertyGroup>
-  <OutputType>WinExe</OutputType>
-  <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
-  <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-  <RootNamespace>MiracleList_WinUI</RootNamespace>
-  <ApplicationManifest>app.manifest</ApplicationManifest>
-  <Platforms>x86;x64;ARM64</Platforms>
-  <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
-  <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
-  <UseWinUI>true</UseWinUI>
-  <EnableMsixTooling>true</EnableMsixTooling>
-  <Version>7.12.5.0</Version>
- </PropertyGroup>
+  <PropertyGroup>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <RootNamespace>MiracleList_WinUI</RootNamespace>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Platforms>x86;x64;ARM64</Platforms>
+    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+    <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
+    <UseWinUI>true</UseWinUI>
+    <EnableMsixTooling>true</EnableMsixTooling>
+    <Version>7.12.5.0</Version>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
- <!--Versionsinfos-->
- <PropertyGroup>
-  <Version>7.11.0.0</Version>
-  <AssemblyVersion>7.12.5.0</AssemblyVersion>
-  <FileVersion>7.12.5.0</FileVersion>
-  <InformationalVersion>7.12.5.0-05/17/2023 11:49:31</InformationalVersion>
-  <ApplicationDisplayVersion>7.11</ApplicationDisplayVersion>
-  <ApplicationVersion>7</ApplicationVersion>
- </PropertyGroup>
- 
- <ItemGroup>
-   <None Remove="appsettings.json" />
- </ItemGroup>
+  <!--Versionsinfos-->
+  <PropertyGroup>
+    <Version>7.11.0.0</Version>
+    <AssemblyVersion>7.12.5.0</AssemblyVersion>
+    <FileVersion>7.12.5.0</FileVersion>
+    <InformationalVersion>7.12.5.0-05/17/2023 11:49:31</InformationalVersion>
+    <ApplicationDisplayVersion>7.11</ApplicationDisplayVersion>
+    <ApplicationVersion>7</ApplicationVersion>
+  </PropertyGroup>
 
- <ItemGroup>
-  <Content Include="Assets\SplashScreen.scale-200.png" />
-  <Content Include="Assets\LockScreenLogo.scale-200.png" />
-  <Content Include="Assets\Square150x150Logo.scale-200.png" />
-  <Content Include="Assets\Square44x44Logo.scale-200.png" />
-  <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-  <Content Include="Assets\StoreLogo.png" />
-  <Content Include="Assets\Wide310x150Logo.scale-200.png" />
- </ItemGroup>
+  <ItemGroup>
+    <None Remove="appsettings.json" />
+    <None Remove="Controls\FooterControl.xaml" />
+    <None Remove="Controls\HeaderControl.xaml" />
+    <None Remove="Images\MiracleListLogo.png" />
+    <None Remove="Resources\Brushes.xaml" />
+    <None Remove="Views\AboutView.xaml" />
+    <None Remove="Views\LoginView.xaml" />
+    <None Remove="Views\TaskManagementView.xaml" />
+  </ItemGroup>
 
- <ItemGroup>
-   <Content Include="appsettings.json">
-     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-   </Content>
- </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\SplashScreen.scale-200.png" />
+    <Content Include="Assets\LockScreenLogo.scale-200.png" />
+    <Content Include="Assets\Square150x150Logo.scale-200.png" />
+    <Content Include="Assets\Square44x44Logo.scale-200.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
+    <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+  </ItemGroup>
 
- <ItemGroup>
-  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221109.1" />
-  <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
-  <Manifest Include="$(ApplicationManifest)" />
- </ItemGroup>
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\MiracleListLogo.png">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
- <!--ML: Projektreferenzen-->
- <ItemGroup>
-  <ProjectReference Include="..\BO\BO.csproj" />
-  <ProjectReference Include="..\MiracleList_Interfaces\MiracleList_Interfaces.csproj" />
-  <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
- </ItemGroup>
- 
- <!--ML: Zusätzliche NuGet-Pakete -->
- <ItemGroup>
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.JSON" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.*" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.6.0" />
-  <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
- </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230502000" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+    <Manifest Include="$(ApplicationManifest)" />
+  </ItemGroup>
 
- <!-- 
+  <!--ML: Projektreferenzen-->
+  <ItemGroup>
+    <ProjectReference Include="..\BO\BO.csproj" />
+    <ProjectReference Include="..\MiracleList_Interfaces\MiracleList_Interfaces.csproj" />
+    <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+  </ItemGroup>
+
+  <!--ML: Zusätzliche NuGet-Pakete -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.JSON" Version="7.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.*" />
+    <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.6.0" />
+    <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
+    <PackageReference Include="MvvmGen" Version="1.2.1" />
+    <PackageReference Include="PInvoke.User32" Version="0.7.124" />
+  </ItemGroup>
+
+  <!-- 
     Defining the "Msix" ProjectCapability here allows the Single-project MSIX Packaging
     Tools extension to be activated for this project even if the Windows App SDK Nuget
     package has not yet been restored.
   -->
- <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-  <ProjectCapability Include="Msix" />
- </ItemGroup>
+  <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
+    <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\AboutView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\LoginView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\TaskManagementView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Controls\FooterControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Controls\HeaderControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Resources\Brushes.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
 
- <!-- 
+  <!-- 
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution 
     Explorer "Package and Publish" context menu entry to be enabled for this project even if 
     the Windows App SDK Nuget package has not yet been restored.
   -->
- <PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-  <HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
- </PropertyGroup>
+  <PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
+    <HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
+  </PropertyGroup>
 </Project>
