--- a/src/MiracleList_WinUI/MiracleList_WinUI.csproj
+++ b/src/MiracleList_WinUI/MiracleList_WinUI.csproj
@@ -32,6 +32,7 @@
     <None Remove="Resources\Brushes.xaml" />
     <None Remove="Views\AboutView.xaml" />
     <None Remove="Views\LoginView.xaml" />
+    <None Remove="Views\TaskDetailView.xaml" />
     <None Remove="Views\TaskManagementView.xaml" />
   </ItemGroup>
 
@@ -88,6 +89,11 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\TaskDetailView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\AboutView.xaml">
