--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -14,10 +14,10 @@
 
  <!--Versionen-->
  <PropertyGroup>
-  <Version>7.12.5.0</Version>
-  <AssemblyVersion>7.12.5.0</AssemblyVersion>
-  <FileVersion>7.12.5.0</FileVersion>
-  <InformationalVersion>7.12.5.0-05/17/2023 11:49:30</InformationalVersion>
+  <Version>7.13.1.1</Version>
+  <AssemblyVersion>7.13.1.1</AssemblyVersion>
+  <FileVersion>7.13.1.1</FileVersion>
+  <InformationalVersion>7.13.1.1-06/02/2023</InformationalVersion>
  </PropertyGroup>
 
  <!--Autor-->
