--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -37,15 +37,15 @@
 
  <!--NuGets-->
  <ItemGroup>
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-  <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
+  <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.8.0" />
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.*" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.*" />
   <PackageReference Include="Microsoft.JSInterop" Version="7.0.*" />
   <PackageReference Include="UAParser" Version="3.1.*" />
  </ItemGroup>
