--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -110,6 +110,7 @@
 
  <!--NuGet-Pakete-->
  <ItemGroup>
+
   <!--Zusätzliche Pakete von Microsoft-->
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
@@ -118,9 +119,9 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.*" />
 
   <!--Zusätzliche Pakete von Anderen-->
-  <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.4" />
-  <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
-  <PackageReference Include="Blazored.Toast" Version="4.1.0" />
+  <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.*" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
+  <PackageReference Include="Blazored.Toast" Version="4.1.*" />
  </ItemGroup>
 
  <ItemGroup>
