--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -39,10 +39,10 @@
 
  <!--Versionsinfos-->
  <PropertyGroup>
-  <Version>7.16.0.0</Version>
-  <AssemblyVersion>7.16.0.0</AssemblyVersion>
-  <FileVersion>7.16.0.0</FileVersion>
-  <InformationalVersion>7.16.0.0-08/24/2023 10:30:52</InformationalVersion>
+  <Version>7.16.1.0</Version>
+  <AssemblyVersion>7.16.1.0</AssemblyVersion>
+  <FileVersion>7.16.1.0</FileVersion>
+  <InformationalVersion>7.16.1.0-08/25/2023 10:43:34</InformationalVersion>
   <ApplicationDisplayVersion>7.11</ApplicationDisplayVersion>
   <ApplicationVersion>7</ApplicationVersion>
   <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
@@ -122,10 +122,14 @@
   <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.Toast" Version="4.1.*" />
+
+  <!--Nuget-Pakethölle-->
+  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" />
  </ItemGroup>
 
  <ItemGroup>
- <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" />
+
  </ItemGroup>
 
  <!--COM-Referenz für Word-Dokumentengenerierung - geht nur auf Windows!!!-->
