--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.37.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
