--- a/Test/BlazorTests/BlazorTests.csproj
+++ b/Test/BlazorTests/BlazorTests.csproj
@@ -17,12 +17,12 @@
 
  <ItemGroup>
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-  <PackageReference Include="bunit" Version="1.19.14" />
-  <PackageReference Include="JustMock" Version="2023.1.117.1" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-  <PackageReference Include="xunit" Version="2.4.2" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+  <PackageReference Include="bunit" Version="1.23.9" />
+  <PackageReference Include="JustMock" Version="2023.2.719.137" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0-rc.1.23419.4" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0-preview-23424-02" />
+  <PackageReference Include="xunit" Version="2.5.1" />
+  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
