--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -1,26 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
- <!--Compilation & Runtime-->
- <PropertyGroup>
-  <TargetFrameworks>net8.0-android;net8.0-windows10.0.19041.0</TargetFrameworks>
- </PropertyGroup>
-  <!--<TargetFrameworks>net7.0-windows10.0.19041.0</TargetFrameworks>-->
-  <!--net7.0-ios;net7.0-maccatalyst;net7.0-tizen;net7.0-android;-->
-  <TargetPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">33</TargetPlatformVersion>
-  <OutputType>Exe</OutputType>
-  <UseMaui>true</UseMaui>
-  <SingleProject>true</SingleProject>
-  <ImplicitUsings>enable</ImplicitUsings>
-  <EnableDefaultCssItems>false</EnableDefaultCssItems>
-  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
-  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
-  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
-  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
-  <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
-  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
- </PropertyGroup>
-
- <!--Namen-->
+  <!--Namen-->
  <PropertyGroup>
   <Description>Blazor MAUI Version of the MiracleList Web Frontend</Description>
   <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2022-2023</Copyright>
@@ -36,13 +16,35 @@
   <ApplicationIdGuid>F5414985-6647-4C08-B969-D83A519773BA</ApplicationIdGuid>
 
  </PropertyGroup>
+ 
+ 
+ <!--Compilation -->
+ <PropertyGroup>
+  <OutputType>Exe</OutputType>
+  <UseMaui>true</UseMaui>
+  <SingleProject>true</SingleProject>
+  <ImplicitUsings>enable</ImplicitUsings>
+  <EnableDefaultCssItems>false</EnableDefaultCssItems>
+ </PropertyGroup>
+
+ <!--Runtime-->
+ <PropertyGroup>
+  <TargetFrameworks>net8.0-android;net8.0-windows10.0.19041.0</TargetFrameworks>
+  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
+  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
+  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
+  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
+  <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+ </PropertyGroup>
+
 
  <!--Versionsinfos-->
  <PropertyGroup>
-  <Version>7.17.0.0</Version>
-  <AssemblyVersion>7.17.0.0</AssemblyVersion>
-  <FileVersion>7.17.0.0</FileVersion>
-  <InformationalVersion>7.17.0.0-09/19/2023 20:08:42</InformationalVersion>
+  <Version>8.0.0.0</Version>
+  <AssemblyVersion>8.0.0.0</AssemblyVersion>
+  <FileVersion>8.0.0.0</FileVersion>
+  <InformationalVersion>8.0.0.0-09/20/2023 22:58:38</InformationalVersion>
   <ApplicationDisplayVersion>7.11</ApplicationDisplayVersion>
   <ApplicationVersion>7</ApplicationVersion>
   <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
@@ -98,6 +100,8 @@
   <EmbeddedResource Include="appsettings.json" />
  </ItemGroup>
 
+
+ 
  <!--Projektreferenzen-->
  <ItemGroup>
   <ProjectReference Include="..\MiracleList_Interfaces\MiracleList_Interfaces.csproj" />
@@ -108,29 +112,31 @@
   <ProjectReference Include="..\SamplesRCL\SamplesRCL.csproj" />
  </ItemGroup>
 
+ <!--Neue NuGet-Pakete für MAUI ab .NET 8.0-->
+ <ItemGroup>
+  <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.1.23419.4" />
+ </ItemGroup>
+ 
  <!--NuGet-Pakete-->
  <ItemGroup>
 
   <!--Zusätzliche Pakete von Microsoft-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.*" />
-  <PackageReference Include="System.Net.Http.Json" Version="7.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="System.Net.Http.Json" Version="8.0.0-rc.1.23419.4" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0-rc.1.23419.6" />
 
   <!--Zusätzliche Pakete von Anderen-->
   <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.Toast" Version="4.1.*" />
 
-  <!--Nuget-Pakethölle-->
-  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" />
- </ItemGroup>
-
- <ItemGroup>
 
  </ItemGroup>
+
 
  <!--COM-Referenz für Word-Dokumentengenerierung - geht nur auf Windows!!!-->
  <ItemGroup>
