--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -1,22 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+ <PropertyGroup>
+  <TargetFramework>net8.0</TargetFramework>
+  <ImplicitUsings>enable</ImplicitUsings>
+  <Nullable>enable</Nullable>
 
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-  <Version>8.0.0.0</Version><AssemblyVersion>8.0.0.0</AssemblyVersion><FileVersion>8.0.0.0</FileVersion><InformationalVersion>8.0.0.0-09/20/2023 22:58:39</InformationalVersion></PropertyGroup>
+  <IsPackable>false</IsPackable>
+  <IsTestProject>true</IsTestProject>
+  <Version>8.0.0.0</Version>
+  <AssemblyVersion>8.0.0.0</AssemblyVersion>
+  <FileVersion>8.0.0.0</FileVersion>
+  <InformationalVersion>8.0.0.0-09/20/2023 22:58:39</InformationalVersion>
+ </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.10.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-    <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.37.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="coverlet.collector" Version="3.2.0" />
-  </ItemGroup>
+ <ItemGroup>
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.10.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.37.1" />
+  <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
+  <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+  <PackageReference Include="coverlet.collector" Version="3.2.0" />
+ </ItemGroup>
 
  <!--Für Playwright-->
  <PropertyGroup>
