--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -15,7 +15,7 @@
  </PropertyGroup>
 
  <PropertyGroup>
-  <TargetFramework>net7.0</TargetFramework>
+  <TargetFramework>net8.0</TargetFramework>
   <AssemblyName>BL</AssemblyName>
   <PackageId>BL</PackageId>
   <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
@@ -33,11 +33,11 @@
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.10.0" />
   <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-rc.1.23419.6" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-rc.1.23419.4" />
   <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
-  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.21.1" />
+  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.0.0-rc.1.23419.6-01" />
  </ItemGroup>
 
  <ItemGroup>
