--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -71,15 +71,15 @@
  <!--NuGet-Pakete-->
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.*" PrivateAssets="all" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0-rc.1.23421.29" PrivateAssets="all" />
 
   <!--Zusätzliche Pakete von Microsoft-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.*" />
-  <PackageReference Include="System.Net.Http.Json" Version="7.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="System.Net.Http.Json" Version="8.0.0-rc.1.23419.4" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0-rc.1.23419.6" />
   
   <!--Zusätzliche Pakete von Anderen-->
   <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.4" />
