--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -11,7 +11,7 @@
  </PropertyGroup>
 
  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-  <NoWarn>1701;1702;1998</NoWarn>
+  <NoWarn>1998;HTML00004</NoWarn>
  </PropertyGroup>
 
  <!--Projektreferenzen-->
