--- a/src/MiracleList_BU/MiracleList_BU.csproj
+++ b/src/MiracleList_BU/MiracleList_BU.csproj
@@ -1,23 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  <Version>8.0.0.0</Version><AssemblyVersion>8.0.0.0</AssemblyVersion><FileVersion>8.0.0.0</FileVersion><InformationalVersion>8.0.0.0-09/23/2023 19:02:33</InformationalVersion></PropertyGroup>
+ <PropertyGroup>
+  <TargetFramework>net8.0</TargetFramework>
+  <RootNamespace>Web</RootNamespace>
+  <Nullable>enable</Nullable>
+  <ImplicitUsings>enable</ImplicitUsings>
+  <Version>8.0.0.0</Version>
+  <AssemblyVersion>8.0.0.0</AssemblyVersion>
+  <FileVersion>8.0.0.0</FileVersion>
+  <InformationalVersion>8.0.0.0-09/23/2023 19:02:33</InformationalVersion>
+ </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\MiracleList_BU.Client\MiracleList_BU.Client.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0-rc.2.23480.2" />
-  </ItemGroup>
+ <ItemGroup>
+  <ProjectReference Include="..\MiracleList_BU.Client\MiracleList_BU.Client.csproj" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0-rc.2.23480.2" />
+ </ItemGroup>
 
-  <ItemGroup>
-    <Content Update="appsettings.json">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-  </ItemGroup>
-
-
+ <ItemGroup>
+  <Content Update="appsettings.json">
+   <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+   <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+  </Content>
+ </ItemGroup>
 
 </Project>
