--- a/src/MiracleList_BD/MiracleList_BD.csproj
+++ b/src/MiracleList_BD/MiracleList_BD.csproj
@@ -1,32 +1,21 @@
 <!--Projektdatei der MiracleList Blazor Desktop App-->
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
- <!--Runtime-->
+ <!--Hinweis: Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
+
+ <!--Weitere App-Metadaten -->
+ <PropertyGroup>
+  <Description>Blazor Desktop (Blazor Hybrid) Version of the MiracleList Web Frontend</Description>
+ </PropertyGroup>
+
+ <!--Runtime + Compiler-->
  <PropertyGroup>
   <TargetFramework>net8.0-windows</TargetFramework>
   <OutputType>WinExe</OutputType>
   <UseWPF>true</UseWPF>
   <IsShippingPackage>false</IsShippingPackage>
   <RootNamespace>BD</RootNamespace>
- </PropertyGroup>
-
- <!--Namen-->
- <PropertyGroup>
-  <Description>Blazor Desktop (Blazor Hybrid) Version of the MiracleList Web Frontend</Description>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2019-2023</Copyright>
-  <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
-  <Company>www.IT-Visions.de</Company>
-  <Product>MiracleList</Product>
-  <RootNamespace>BD</RootNamespace>
   <StartupObject>BD.Desktop.WPFApp</StartupObject>
- </PropertyGroup>
-
- <!--Versionsinfos-->
- <PropertyGroup>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:32</InformationalVersion>
  </PropertyGroup>
 
  <!--Grafiken-->
