--- a/src/MiracleList_BM/MiracleList_BM.csproj
+++ b/src/MiracleList_BM/MiracleList_BM.csproj
@@ -1,25 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <!--Namen-->
+ <!--Hinweis: Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
+
+ <!--Weitere App-Metadaten -->
  <PropertyGroup>
   <Description>Blazor MAUI Version of the MiracleList Web Frontend</Description>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2022-2023</Copyright>
-  <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
-  <Company>www.IT-Visions.de</Company>
-  <Product>MiracleList</Product>
-  <RootNamespace>BM</RootNamespace>
-
   <!-- MAUI: Display name -->
   <ApplicationTitle>MiracleList_BM</ApplicationTitle>
   <!-- MAUI: App Identifier -->
   <ApplicationId>de.it-visions.miraclelist_bm</ApplicationId>
   <ApplicationIdGuid>F5414985-6647-4C08-B969-D83A519773BA</ApplicationIdGuid>
-
  </PropertyGroup>
- 
- 
- <!--Compilation -->
+
+ <!--Compiler -->
  <PropertyGroup>
+  <RootNamespace>BM</RootNamespace>
   <OutputType>Exe</OutputType>
   <UseMaui>true</UseMaui>
   <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
@@ -39,15 +34,8 @@
   <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
  </PropertyGroup>
 
-
- <!--Versionsinfos-->
+ <!--Weitere MAUI-Einstellungen-->
  <PropertyGroup>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:32</InformationalVersion>
-  <ApplicationDisplayVersion>7.11</ApplicationDisplayVersion>
-  <ApplicationVersion>7</ApplicationVersion>
   <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
   <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   <PackageCertificateThumbprint>D8EA63765716ECA15A50BF9016CA46AEFB0E4CFC</PackageCertificateThumbprint>
