--- a/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
+++ b/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
@@ -1,18 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
+ <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
+
+ <!--Weitere App-Metadaten -->
  <PropertyGroup>
   <TargetFramework>net8.0</TargetFramework>
+  <Description>Blazor Web App (Blazor United) Version of the MiracleList Web Frontend</Description>
+ </PropertyGroup>
+ 
+ <!--Compilereinstellungen-->
+ <PropertyGroup>
   <ImplicitUsings>enable</ImplicitUsings>
   <RootNamespace>Web.Client</RootNamespace>
   <Nullable>enable</Nullable>
   <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
   <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:33</InformationalVersion>
  </PropertyGroup>
 
+ <!--NuGet-Pakete-->
  <ItemGroup>
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rc.2.23480.2" />
  </ItemGroup>
@@ -26,6 +31,5 @@
   <ProjectReference Include="..\MLBlazorRCL\MLBlazorRCL.csproj" />
   <ProjectReference Include="..\SamplesRCL\SamplesRCL.csproj" />
  </ItemGroup>
-
 
 </Project>
