--- a/src/MiracleList_BU/MiracleList_BU.csproj
+++ b/src/MiracleList_BU/MiracleList_BU.csproj
@@ -1,21 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+ <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
+
+ <!--Weitere App-Metadaten -->
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
+  <Description>Blazor Web App (Blazor United) Version of the MiracleList Web Frontend</Description>
+ </PropertyGroup>
+ 
+ <!--Compilereinstellungen-->
+ <PropertyGroup>
   <RootNamespace>Web</RootNamespace>
   <Nullable>enable</Nullable>
   <ImplicitUsings>enable</ImplicitUsings>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:33</InformationalVersion>
  </PropertyGroup>
 
+ <!--Projekte und NuGet-Pakete-->
  <ItemGroup>
   <ProjectReference Include="..\MiracleList_BU.Client\MiracleList_BU.Client.csproj" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0-rc.2.23480.2" />
  </ItemGroup>
 
+ <!--AppSettings-Datei getrennt halten-->
  <ItemGroup>
   <Content Update="appsettings.json">
    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
