--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -1,16 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
- <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2019-2023</Copyright>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:33</InformationalVersion>
-  <LangVersion>latest</LangVersion>
- </PropertyGroup>
+ <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
 
- <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+ <!--Compiler-->
+ <PropertyGroup>
   <NoWarn>1998;HTML00004</NoWarn>
  </PropertyGroup>
 
@@ -35,13 +28,12 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0-rc.2.23480.1" />
 
   <!--Zusätzliche Pakete von Anderen-->
-  <PackageReference Include="Blazor.ContextMenu" Version="1.16.0" />
-  <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.4" />
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-  <PackageReference Include="Blazored.Toast" Version="4.1.0" />
-  <PackageReference Include="Blazored.FluentValidation" Version="2.1.0" />
-  <PackageReference Include="Radzen.Blazor" Version="4.18.1" />
-
+  <PackageReference Include="Blazor.ContextMenu" Version="1.16.*" />
+  <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.*" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
+  <PackageReference Include="Blazored.Toast" Version="4.1.*" />
+  <PackageReference Include="Blazored.FluentValidation" Version="2.1.*" />
+  <PackageReference Include="Radzen.Blazor" Version="4.18.*" />
  </ItemGroup>
 
  <ItemGroup>
